examples/good/09-01-static-binding.dog
int x = 5;
yeet x;
{
    int x;
    x = 10;
    yeet x;
}
yeet x;