examples/bad/12-09-return-type-check-main-scope.dog
{
    return 5;
}

{
    return "str";
}